WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170116
Fixes for libwebrtc logging after
r214288
https://bugs.webkit.org/show_bug.cgi?id=170116
Summary
Fixes for libwebrtc logging after r214288
Alejandro G. Castro
Reported
2017-03-27 04:24:58 PDT
The refactor of g_log_crit was not complete after that commit.
Attachments
Patch
(2.32 KB, patch)
2017-03-27 05:25 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Patch
(2.08 KB, patch)
2017-03-27 05:33 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2017-03-27 05:25:09 PDT
Created
attachment 305462
[details]
Patch
Alejandro G. Castro
Comment 2
2017-03-27 05:33:01 PDT
Created
attachment 305463
[details]
Patch
youenn fablet
Comment 3
2017-03-27 10:24:30 PDT
Comment on
attachment 305463
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305463&action=review
> Source/ThirdParty/libwebrtc/Source/webrtc/base/logging.cc:121 > + static webrtc::NeverDestroyed<LogMessage::StreamList> streams GUARDED_BY(g_log_crit());
Why do we need both changes in this method?
Alejandro G. Castro
Comment 4
2017-03-27 23:03:55 PDT
(In reply to youenn fablet from
comment #3
)
> Comment on
attachment 305463
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=305463&action=review
> > > Source/ThirdParty/libwebrtc/Source/webrtc/base/logging.cc:121 > > + static webrtc::NeverDestroyed<LogMessage::StreamList> streams GUARDED_BY(g_log_crit()); > > Why do we need both changes in this method?
First one to use the method g_log_crit() instead of the old variable g_log_crit when creating the static variable, and the second change to make sure everyone calling the method does it inside a critical section because it is returning the guarded variable, clang is complaining to us if we don't do it.
WebKit Commit Bot
Comment 5
2017-03-27 23:35:21 PDT
Comment on
attachment 305463
[details]
Patch Clearing flags on attachment: 305463 Committed
r214466
: <
http://trac.webkit.org/changeset/214466
>
WebKit Commit Bot
Comment 6
2017-03-27 23:35:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug