Fixes for libwebrtc logging after r214288 https://bugs.webkit.org/show_bug.cgi?id=170116

Patch by Alejandro G. Castro <alex@igalia.com> on 2017-03-27
Reviewed by Youenn Fablet.

* Source/webrtc/base/logging.cc: Added the critical section
requirement and the call to the new getter for g_log_crit.

Canonical link: https://commits.webkit.org/187091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214466 268f45cc-cd09-0410-ab3c-d52691b4dbfc